# libphpext

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.en-US.md  README.md  arguments.hpp  array.hpp  array_iterator.hpp  array_member.hpp  buffer.hpp  callable.hpp  class.hpp  class_base.hpp  class_entry.hpp  class_impl.hpp  class_wrapper.hpp  closure.hpp  constant_entry.hpp  delegate.hpp  error.hpp  error_info.hpp  exception.hpp  exception_impl.hpp  extension.cpp  extension_entry.hpp  ini.hpp  ini_entry.hpp  object.hpp  parameters.hpp  phpext.h  phpext.hpp  property.hpp  property_entry.hpp  string.hpp  type.hpp  util.hpp  value.hpp  value_impl.hpp  vendor.h  (+1 more)
bases/: class_base.cpp  class_base.h  class_builtin.cpp  class_builtin.h
example/: example.cpp  example.php  example1.cpp  example2.cpp  example3.c  example3.cpp  reference.cpp.bak
funcs/: array.cpp  array.h  encoding.cpp  encoding.h  error.cpp  error.h  hash.cpp  hash.h  ini.cpp  ini.h  parse_ini.cpp  parse_url.cpp  parse_url.h  parser.cpp  parser.h  parser_ini.cpp  parser_ini.h  reference.cpp  reference.h  string_builder.cpp  string_builder.h  string_parser.cpp  string_parser.h  url.cpp  url.h  util.cpp  util.h
parts/: arguments.cpp  arguments.h  class_closure.cpp  class_closure.h  class_entry.h  class_wrapper.h  constant_entry.cpp  constant_entry.h  extension_entry.cpp  extension_entry.h  function_entry.h  ini_entry.cpp  ini_entry.h  method_entry.h  property_entry.cpp  property_entry.h
src/: README.md  argument_entry.h  argument_info.h  arguments.cpp  arguments.h  array.cpp  array.h  array_iterator.cpp  array_iterator.h  array_member.cpp  array_member.h  attribute_entry.cpp  attribute_entry.h  basic_value.h  buffer.cpp  buffer.h  callable.cpp  callable.h  callback.cpp  callback.h  cast.cpp  cast.h  class.cpp  class.h  class_base.cpp  class_base.h  class_basic.h  class_closure.cpp  class_closure.h  class_entry.cpp  class_entry.h  class_wrapper.cpp  class_wrapper.h  closure.h  constant.cpp  constant.h  constant_entry.cpp  constant_entry.h  constants.h  conversion.cpp  (+78 more)
src/bases/: class_base.cpp
src/internal/: arg_info.cpp  arg_info.h  class_wrapper.h  constant_adder.cpp  constant_adder.h  function_adder.cpp  function_adder.h  ini_adder.cpp  ini_adder.h  ini_get.cpp  ini_get.h  internal.h  method_adder.h
src/parts/: arguments.cpp  arguments.h  class_entry.h  constant_entry.cpp  constant_entry.h  extension_entry.cpp  extension_entry.h  function_entry.cpp  function_entry.h  ini_entry.cpp  ini_entry.h  method_entry.h  property_entry.cpp  property_entry.h
src/parts_unfinished/: class.h  extension.cpp  extension.h
src/types/: array.cpp  array.h  array_value.h  callable.cpp  callable.h  exception.h  parameters.h  string.cpp  string.h  value.cpp  value.h  value_array.cpp  value_bool.cpp  value_callable.cpp  value_number.cpp  value_object.cpp  value_string.cpp
test/: callable.php  extension.cpp  extension.cpp.bak  extension.php  extension_class.php  extension_constant.php  extension_function.php  extension_ini.php  types_array.cpp  types_callable.cpp  types_string.cpp
types/: array.cpp  array.h  array_item.cpp  array_item.h  buffer.cpp  buffer.h  callable.cpp  callable.h  exception.cpp  exception.h  generator.cpp  generator.h  object.cpp  object.h  parameters.cpp  parameters.h  property.cpp  property.h  string.cpp  string.h  value.cpp  value.h  value_array.cpp  value_bool.cpp  value_callable.cpp  value_closure.cpp  value_number.cpp  value_object.cpp  value_string.cpp
